--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "private": true,
     "description": "Static site with Netlify Function to send Telegram message",
     "scripts": {
-      "build": "echo 'No build necessary'"
+        "build": "echo 'No build necessary'"
     },
     "dependencies": {
-      "axios": "^1.7.7"
+        "axios": "^1.7.7",
+        "dotenv": "^16.4.5"
     }
-  }
-  
+}
